For zmodem transfers, do not read entire file into memory

Read at most 1Mb of data instead of loading entire file into memory.
Add -e to force sender to escape all control characters

Patch/Bug by gonglinglei gmail com

BUG: 389906
FIXED-IN: 18.04